--- a/index.html
+++ b/index.html
@@ -152,33 +152,20 @@
 
       <div id="tab-three" class="tab"> 
         <h2>In the Oven</h2>
-        None right now!
-        <h2>Planned Pairs</h2>
-
-        <ul id="planned-breedings">
-          <li>
+        <li>
             <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5087834"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=4358078&size=large&format=png&rev=1761945075"></a> <i class="fa-solid fa-xmark"></i> <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5073555"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=4342817&size=large&format=png&rev=1767151846"></a>
             <ul>
               <li><b> Prince x Cat</b></li>
-              <li>
-                <a class="form-button">[copy form] <span class="copied-tooltip">Copied!</span></a>
-                <pre class="form-content">
-[b]Owner to be:[/b] flyteck
-[b]Breeding Type:[/b] Event
-[b]Stallion:[/b] [url=https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5087834]Prince[/url]
-[b]Stallion permission:[/b] [url=https://www.chickensmoothie.com/Forum/viewtopic.php?f=103&t=5020171&p=149797980#p149797980]On his page![/url]
-[b]Mare:[/b] [url=https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5073555]Cat[/url]
-[b]Mare Permission:[/b] [url=https://www.chickensmoothie.com/Forum/viewtopic.php?f=103&t=2720509&start=70#p150088304]On her page![/url]
-[b]Requested Traits:[/b]
-1. EYES
-2. PINK (quip or fill if possible since I believe that's allowed for vday now?)
-3. Wing paint
-[b]Preferred Artist:[/b] Copper, Koel, Oddly, or Aravel!
-
-[img]https://www.chickensmoothie.com/oekaki/image/image.php?id=4358078&size=gallery&format=png&rev=1761945075[/img] x [img]https://www.chickensmoothie.com/oekaki/image/image.php?id=4342817&size=gallery&format=png&rev=1767151846[/img]</pre>
+              <li>&nbsp;&nbsp;1. EYES</li>
+              <li>&nbsp;&nbsp;2. PINK (quip or fill if possible since I believe that's allowed for vday now?)</li>
+              <li>&nbsp;&nbsp;3. Wing paint</li>
               </li>
             </ul>
           </li>
+
+        <h2>Planned Pairs</h2>
+
+        <ul id="planned-breedings">
 
 
           <li>
