--- a/index.html
+++ b/index.html
@@ -152,6 +152,8 @@
 
       <div id="tab-three" class="tab"> 
         <h2>In the Oven</h2>
+
+        <ul id="planned-breedings">
         <li>
             <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5087834"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=4358078&size=large&format=png&rev=1761945075"></a> <i class="fa-solid fa-xmark"></i> <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5073555"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=4342817&size=large&format=png&rev=1767151846"></a>
             <ul>
@@ -162,12 +164,11 @@
               </li>
             </ul>
           </li>
+        </ul>
 
         <h2>Planned Pairs</h2>
 
         <ul id="planned-breedings">
-
-
           <li>
             <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=53&t=2299076"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=1936070&size=large&format=png&rev=1399600847"></a> <i class="fa-solid fa-xmark"></i> <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=53&t=2356410"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=1702055&size=large&format=png&rev=1404227927"></a>
             <ul>
