--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
             <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5087834"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=4358078&size=large&format=png&rev=1761945075"></a> <i class="fa-solid fa-xmark"></i> <a href="https://www.chickensmoothie.com/Forum/viewtopic.php?f=124&t=5073555"><img src="https://www.chickensmoothie.com/oekaki/image/image.php?id=4342817&size=large&format=png&rev=1767151846"></a>
             <ul>
               <li><b> Prince x Cat</b></li>
-              <li>&nbsp;&nbsp;1. EYES</li>
-              <li>&nbsp;&nbsp;2. PINK (quip or fill if possible since I believe that's allowed for vday now?)</li>
-              <li>&nbsp;&nbsp;3. Wing paint</li>
+              <li>&nbsp;&nbsp;&nbsp;1. EYES</li>
+              <li>&nbsp;&nbsp;&nbsp;2. PINK (quip or fill)</li>
+              <li>&nbsp;&nbsp;&nbsp;3. Wing paint</li>
               </li>
             </ul>
           </li>
