--- a/wmes/dew.html
+++ b/wmes/dew.html
@@ -10,7 +10,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+SC:ital,wght@0,100..900;1,100..900&family=Mooli&family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
 
-  <title>Flyteck's WMEs - Dew</title>
+  <link rel="icon" href="wmesiteicon.png" type="image/png">
+
+  <title>Flyteck's WMEs - Dew Berry</title>
 </head>
 
 <body class="dark-mode">
