--- a/wmes/fluffy.html
+++ b/wmes/fluffy.html
@@ -10,6 +10,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+SC:ital,wght@0,100..900;1,100..900&family=Mooli&family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
 
+  <link rel="icon" href="wmesiteicon.png" type="image/png">
+
   <title>Flyteck's WMEs - Fluffy</title>
 </head>
 
