--- a/wmes/jasper.html
+++ b/wmes/jasper.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+../<!DOCTYPE html>
 <head>
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
